Docs: Add cache-busting query parameter to JS and CSS in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       NagiSwipe Integration Example 
       Just load these two files.
     -->
-    <link rel="stylesheet" href="NagiSwipe-main.css">
+    <link rel="stylesheet" href="NagiSwipe-main.css?2026-01-14">
     
     <style>
         /* [DEMO PAGE CSS] */
@@ -44,7 +44,7 @@
     <div class="gallery-grid" id="grid"></div>
 
     <!-- Core Library -->
-    <script src="NagiSwipe-main.js"></script>
+    <script src="NagiSwipe-main.js?2026-01-14"></script>
     
     <!-- Demo Script -->
     <script>
