Fix NagiSwipe image positioning, iPhone shift, and global spinner stabilization

--- a/index.html
+++ b/index.html
@@ -93,9 +93,10 @@
 
         // Manual items (local images)
         const manualItems = [
-            { src: 'Kyururun.png', thumb: 'Kyururun.png' },
-            { src: 'Fu-n.png', thumb: 'Fu-n.png' },
-            { src: 'Shimeshime.png', thumb: 'Shimeshime.png' }
+            { src: 'img/Kyururun.png', thumb: 'img/Kyururun.png' },
+            { src: 'img/Fu-n.png', thumb: 'img/Fu-n.png' },
+            { src: 'img/Shimeshime.png', thumb: 'img/Shimeshime.png' },
+            { src: 'img/chirashi-mini.jpg', thumb: 'img/chirashi-mini.jpg' }
         ];
 
         // Combine with generated items
